apps/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-immich
spec:
  ports:
    - name: http
      protocol: TCP
      port: 2283
      targetPort: 2283
