apps/immich/slice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-immich-slice
  labels:
    kubernetes.io/service-name: external-immich
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 2283
endpoints:
  - addresses:
      - "192.168.88.212"
    conditions:
      ready: true
